# python-projects

app-1/: .editorconfig  mkdocs.yml  noxfile.py  pyproject.toml  tasks.py
app-1/src/app_1/: __init__.py  task.py
app-2/conda/: pyproject.toml
app-2/conda/src/: main.py
app-2/conda/src/conda/app/: main.py
