[project]
name = "conda"
version = "0.2.0"
description = ""
authors = [{ name = "felipesantos2", email = "santospinheiro627@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "rich (>=14.2.0,<15.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.127.0,<0.128.0)",
]

[tool.poetry]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)", "ruff (>=0.14.10,<0.15.0)"]

[tool.poetry.scripts]
my-script = "conda.main"


[tool.ruff.format]
quote-style = "single"
